--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Hide scrollbars in Chrome, Edge, Safari */
+.hide-scrollbarhide-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Hide scrollbars in Firefox */
+.hide-scrollbar {
+  scrollbar-width: none;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Ensure scrolling is still functional */
+.hide-scrollbar {
+  overflow-y: auto;
+}
+
+.customshadow {
+  box-shadow: 0px 0px 80px 2px rgba(255, 255, 255, 0.2);
+}
+
+.greendot {
+  box-shadow: 0px 0px 20px 10px green;
+}
+
+.bg-gradient-custom {
+  background: linear-gradient(
+    120deg,
+    var(--tw-gradient-from),
+    var(--tw-gradient-to)
+  );
+}
+
+.customdegree {
+  transform: rotate(360deg);
+  transition: transform 0.3s ease;
+}
+
+.outerdiv:hover .customdegree {
+  transform: rotate(320deg); /* Returns to normal on hover */
 }
