added file handling(only terminal)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Hide scrollbars in Chrome, Edge, Safari */
 .hide-scrollbarhide-scrollbar::-webkit-scrollbar {
   display: none;
