--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,10 @@ html {
   box-shadow: 0px 0px 20px 10px green;
 }
 
+.bluedot {
+  box-shadow: 0px 0px 20px 10px blue;
+}
+
 .bg-gradient-custom {
   background: linear-gradient(
     120deg,
